[project]
name = "ai-engineer-roadmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "email-validator>=2.3.0",
    "fastapi>=0.139.2",
    "mypy>=2.3.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "ruff>=0.15.22",
]
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # E: 错误, F: pyflakes, W: 警告, I: 导入排序
ignore = ["E501"]               # 忽略行过长（因为我们在 line-length 已设）

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
